# PySide6QCustomPlot

./: .gitignore  CMakeLists.txt  README.md  demo.py  pyproject.toml
.github/workflows/: main.yml
src/: bindings.xml  qcustomplot.h  wrapper.hpp
src-python/pyside6qcustomplot/: __init__.py
